--- a/src/styles.css
+++ b/src/styles.css
@@ -11,6 +11,7 @@
     flex-wrap: wrap;
     justify-content: center;
     margin-top: 1rem;
+    margin-bottom: 1rem;
   }
   
   .cta-container pf-cta {
@@ -26,6 +27,10 @@
   
   #cards {
     justify-content: center;
+    color: white;
     
   }
-  
+
+  :root {
+    --pf-c-card--BackgroundColor: var(--pf-global--active-color--200, #3C3F42);
+  }
